--- a/hooks/package.json
+++ b/hooks/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "@types/express": "^4.17.21",
     "express": "^4.21.0",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.19.1"
   }
 }
